--- a/src/components/departureTiles/styles.scss
+++ b/src/components/departureTiles/styles.scss
@@ -27,7 +27,7 @@
     align-self: center;
 
     h2{
-        font-size: 1.5rem;
+        font-size: 1.4rem;
     }
 }
 
@@ -66,6 +66,13 @@
     width: 33%;
 }
 
+.route-name-text{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 88%;
+}
+
 @media only screen
   and (min-device-width: 768px)
   and (max-device-width: 1024px)
@@ -73,6 +80,15 @@
   and (-webkit-min-device-pixel-ratio: 1) {
       .tile-container{
           width: 20%;
+          .stop-header h2{
+              font-size: 1.6rem;
+          }
+          .route-name-text{
+              font-size: 1.1rem;
+          }
+          .route-departure-time{
+              font-size: 1.2rem;
+          }
       }
 
 }
